fix: manage select visibility by css -> by class.

--- a/jquery_mega_selectbox.css
+++ b/jquery_mega_selectbox.css
@@ -71,3 +71,8 @@ div.optgroup ul.optgroup input.selected {
   color: white;
 }
 
+select.mega_selectbox_hidden {
+  visibility: visible;
+}
+
+
